examples/logfiles/optimization_log_20250719_122029.txt
=== Optimization started at 2025-07-19 12:20:29.538856 ===

Starting configurable TPSO optimization with parameters:
Frequency: 79 GHz
Bandwidth: 8 GHz
Unit cell size: 2 mm
Substrate thickness: 0.8 mm
Pixel grid: 8×8
MSE threshold: 1e-10

--- Starting Phasor-Based Ternary PSO ---
Iter | Best f(x) | Mean f(x) | Stall | Inertia | Diversity
----------------------------------------------------------
Clearing COM object cache...
COM cache refreshed successfully

Running CST simulation...
CPA: The specified project does not exist. A new project hasbeen created.
Do not forget to use CST_MicrowaveStudio.saveFile() to save your project.
Error in CST simulation: [WinError 5] Access is denied: 'C:/Users/User'
CST file closed
Clearing COM object cache...
COM cache refreshed successfully
Current MSE: inf
COM cache refreshed successfully

Running CST simulation...
CPA: The specified project does not exist. A new project hasbeen created.
Do not forget to use CST_MicrowaveStudio.saveFile() to save your project.
Error in CST simulation: [WinError 5] Access is denied: 'C:/Users/User'
CST file closed
COM cache refreshed successfully
Current MSE: inf
COM cache refreshed successfully

Running CST simulation...
CPA: The specified project does not exist. A new project hasbeen created.
Do not forget to use CST_MicrowaveStudio.saveFile() to save your project.
CST file closed
COM cache refreshed successfully
Traceback (most recent call last):
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 970, in <module>
    results = pyoptimize_te(inputparameters)
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 906, in pyoptimize_te
    optimizer = ConfigurableTPSO(
        fun=pso_cost_fn,
        nvars=nvars,
        config=config
    )
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 533, in __init__
    self._initialize_swarm()
    ~~~~~~~~~~~~~~~~~~~~~~^^
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 582, in _initialize_swarm
    self._evaluate_swarm()
    ~~~~~~~~~~~~~~~~~~~~^^
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 593, in _evaluate_swarm
    fitness = self.fun(x_int)
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 394, in __call__
    te, freq, S = calculate_pcr(full_matrix, self.inputparameters)
                  ~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 283, in calculate_pcr
    myCST.Build.Shape.addBrick(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~^
        xMin=float(Xblock[0]), xMax=float(Xblock[1]),
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<2 lines>...
        name=name, component="component1", material="PEC"
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "E:\GOPAL\cst-python-api\cst_python_api\Shape.py", line 127, in addBrick
    result = self.__MWS.AddToHistory("define brick: " + name, vba)
  File "<COMObject NewMWS>", line 2, in AddToHistory
KeyboardInterrupt
Traceback (most recent call last):
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 970, in <module>
    results = pyoptimize_te(inputparameters)
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 906, in pyoptimize_te
    optimizer = ConfigurableTPSO(
        fun=pso_cost_fn,
        nvars=nvars,
        config=config
    )
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 533, in __init__
    self._initialize_swarm()
    ~~~~~~~~~~~~~~~~~~~~~~^^
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 582, in _initialize_swarm
    self._evaluate_swarm()
    ~~~~~~~~~~~~~~~~~~~~^^
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 593, in _evaluate_swarm
    fitness = self.fun(x_int)
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 394, in __call__
    te, freq, S = calculate_pcr(full_matrix, self.inputparameters)
                  ~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 283, in calculate_pcr
    myCST.Build.Shape.addBrick(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~^
        xMin=float(Xblock[0]), xMax=float(Xblock[1]),
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<2 lines>...
        name=name, component="component1", material="PEC"
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "E:\GOPAL\cst-python-api\cst_python_api\Shape.py", line 127, in addBrick
    result = self.__MWS.AddToHistory("define brick: " + name, vba)
  File "<COMObject NewMWS>", line 2, in AddToHistory
KeyboardInterrupt
